Feat: Home screen

--- a/src/app/shared/root.css
+++ b/src/app/shared/root.css
@@ -5,6 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Ranchers&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
 html, body{
   height: 100%;
